# smitepaper-fastapi-server

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_06_19_1804-baeef_add_core_models.py
smitepaper/: api.py  config.py  db.py  main.py  models.py  routers.py  schemas.py  types.py  utils.py
smitepaper/api/: tags.py  wallpapers.py
smitepaper/apps/wallpapers/: routers.py
