[tool.poetry]
name = "smitepaper"
version = "0.1.0"
description = ""
authors = ["Simeon Králik <simeon.kralik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
